# book-bot

./: .env.example  README.md  pyproject.toml  requirements.txt  start_bot.py
book_bot/: __init__.py  bot.py  config.py
book_bot/db/: db.py
book_bot/handlers/: other_handlers.py  user_handlers.py
book_bot/keyboards/: bookmarks_kb.py  main_menu_kb.py  pagination_kb.py
book_bot/services/: file_handling.py
book_bot/vocabularies/: vocab.py
